Upload the design

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				<i class="fa-solid fa-volume-high"></i>
 				<i class="fa-solid fa-volume-xmark"></i>
 			</div>
-			<video src="assets/Discovery Channel - Large Asteroid Impact Simulation.mp4"  autoplay></video>
+			<video src="assets/video.mp4" autoplay></video>
 		</div>
 
     <script src="main.js"></script>
